remove WP-Request-ID  - service will create id for request
